# Projeto-BD

./: README.md  conf.ini  duvidas.txt  help.md  pyproject.toml
APFE/: apfe_submit.md
sql/: Solved.txt  ddl.sql  (+8 more)
src/: README.md  app.py  conf.ini  help.md  pyproject.toml  requirements.txt
src/operations/: delete_db.py
src/persistence/: appointment.py  client.py  contract.py  effective.py  employee.py  establishment.py  establishments.py  intern.py  person.py  review.py  schedule.py  service.py  session.py  speciality.py
src/templates/: admin_cli.html  admin_emp.html  admin_est.html  admin_sch.html  admin_serv.html  admin_spc.html  appointment_details_form_client.html  appointment_details_view_employee.html  client_appointments.html  client_appointments_list.html  client_details_form.html  client_details_form_create.html  client_details_view.html  client_review.html  clients_list.html  contract_details_form.html  contract_details_view.html  employee_appointments.html  employee_appointments_list.html  employee_details_form.html  employee_details_view.html  employee_details_view_client.html  employee_review.html  employee_reviews_list.html  employees_list.html  employees_list_by_establishment.html  employees_list_client.html  establishment_details_form.html  establishment_details_view.html  establishments_list.html  header.html  index.html  review_details_form_client.html  review_details_view.html  schedule_details_form_admin.html  schedule_details_view.html  schedule_details_view_admin.html  schedules_list.html  schedules_list_admin.html  service_details_form.html  (+4 more)
(+4 files in other folders)
