[tool.poetry]
name = "project"
version = "0.1.0"
description = "Implementation of a Database of a company using Flask"
authors = [
    "Tomás Santos Fernandes <t.santos.f@ua.pt>",
    "Danilo Silva <danilomicael@ua.pt>"
]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
Flask = "^3.0.2"
pyodbc = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
